<resources>
    <string name="app_name" translatable="false">BMICalculator</string>
    <string name="determine_your_weight">Determine your weight :</string>
    <string name="weight">Weight :</string>
    <string name="determine_your_height">Determine your height :</string>
    <string name="height">Height :</string>
    <string name="meter">Meter</string>
    <string name="centimeter">Centimeter</string>
    <string name="appreciation">Appreciation</string>
    <string name="calculate_BMI">Calculate BMI</string>
    <string name="reset">Reset</string>
    <string name="result">Result :</string>
    <string name="you_must_click_on_the_button_calculate_BMI_to_obtain_result">You must click on the button \"Calculate BMI\" to obtain result.</string>
    <string name="height_must_be_positive">Height must be positive</string>
    <string name="weight_must_be_positive">Weight must be positive</string>
    <string name="your_BMI_is">"Your BMI is "</string>
    <string name="click_on_the_button_calculate_BMI_to_obtain_result">Click on the button \"Calculate BMI\" to obtain result</string>
    <string name="famine">Famine</string>
    <string name="thinness">Thinness</string>
    <string name="normal_corpulence">Normal corpulence</string>
    <string name="overweight">Overweight</string>
    <string name="moderate_obesity">Moderate obesity</string>
    <string name="severe_obesity">Severe obesity</string>
    <string name="morbid_obesity">Morbid obesity</string>
</resources>
