<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/determine_your_weight"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/poids"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/determine_your_height"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/taille"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:checkedButton="@+id/radio_centimetre"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_metre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meter" />

        <RadioButton
            android:id="@+id/radio_centimetre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeter" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/commentaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appreciation" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calcul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_BMI" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />

    <TextView
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/you_must_click_on_the_button_calculate_BMI_to_obtain_result" />
</LinearLayout>